<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android=" http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">用药安全咨询</string>
    <string name="use_right_now">马上开始体验</string>
    <string name="text_more">更多</string>
    <string name="exit_dialog_title">您的操作将会退出</string>
    <string name="title_back_text">返回</string>
    <string name="more_check_newversion_dlg_title">检测到新版本<xliff:g>%1$s</xliff:g></string>
    <string name="more_check_newversion_btn_update_later">稍后更新</string>
    <string name="more_check_newversion_btn_update">下载更新</string>
    <string name="force_download_start">当前进度：0%</string>
    <string name="no_return_data">无返回数据的提示</string>
    <string name="unknow_version_name">未知版本</string>
    <string name="button_text_yes">好的</string>
    <string name="button_text_no">取消</string>
    <string name="button_text_tips">提示</string>
    <string name="button_logout">退出</string>
    <string name="btn_txt_no">否</string>
    <string name="btn_txt_yes">是</string>
    <!-- 登录 -->
    <string name="button_text_login">马上登录</string>
    <string name="button_title_login">会员登录</string>
    <string name="toast_login_error">登录信息不能为空</string>
    <string name="phone_number">登录名或手机号</string>
    <string name="password">密码</string>
    <string name="text_register_account">注册新帐号</string>
    <string name="text_forget_pwd">忘记密码</string>
    <string name="text_qq_login">使用QQ登录</string>
    <string name="text_weixin_login">使用微信登录</string>
    <!-- 修改密码 -->
    <string name="text_input_origin_pwd">请输入原始密码</string>
    <string name="text_input_new_pwd">请输入新密码</string>
    <string name="text_input_new_pwd_again">请再次输入新密码</string>
    <string name="title_text_change_pwd">修改密码</string>
    <!-- 注册 -->
    <string name="text_submit">提交</string>
    <string name="text_sex">性别</string>
    <string name="please_choose">请选择</string>
    <string name="title_text_register">会员注册</string>
    <string name="hint_input_phone_number">请输入您的手机号码</string>
    <string name="hint_input_pwd">请输入密码</string>
    <string name="hint_input_pwd_again">再次确认密码</string>
    <string name="hint_input_nickname">昵称</string>

    <!-- 更多 -->
    <string name="text_about">关于我们</string>
    <string name="text_introduce">公司简介</string>
    <string name="text_declare">声明</string>
    <string name="text_my_collect">我的收藏</string>
    <string name="text_my_consult">我的咨询</string>
    <string name="text_my_attention">我的关注</string>

    <!-- 关于我们 -->
    <string name="bottom_tab_yaodun">药盾</string>
    <string name="bottom_tab_medicine_knowledge">用药知识</string>
    <string name="bottom_tab_more">更多</string>

    <!-- TAG用ID -->
    <item name="tag_sign_type" type="id"></item>
    <item name="tag_sign_viewholder" type="id"></item>
    <item name="tag_image_load_finish" type="id"></item>
    <item name="imageview_id" type="id"></item>

    <!-- 条码及二维码扫描 -->
    <string name="msg_default_status">美啦提醒您：请在镜头范围内进行扫描。  </string>
    <string name="capture_msg">请将条形码或二维码对准扫描框，即可自动帮你查询。</string>
    <string name="manual_input_msg">请输入产品条形码：</string>
    <string name="manual_input_title">手动输入条形码</string>
    <string name="capture_manual_txt">手动输入</string>

    <!-- 用药知识 -->
    <string name="knowledge_detail">文章详细</string>
    <string name="knowledge_detail_collect_count">收藏（<xliff:g>%1$s</xliff:g>）</string>
    <string name="knowledge_detail_collect">收藏</string>
    <string name="knowledge_detail_cancel_collect">取消收藏</string>
    <string name="knowledge_detail_has_collect">已收藏</string>

    <!-- 药师咨询 -->
    <string name="tips_doctor_consule_empty_view">暂时没有药师咨询记录</string>
    <string name="text_doctor_consult">药师咨询</string>
    <string name="question_detail">提问详细</string>
    <string name="has_reply">已经回复</string>
    <string name="has_not_reply">待回复</string>
    <string name="knowledge_detail_cancel_attention">取消关注</string>

    <!-- 反馈 -->
    <string name="feedback_hint">感谢您对我们提出的反馈,限制输入100字以内</string>
    <string name="feedback_empty">请输入反馈内容再提交</string>
    <string name="feedback_title">意见反馈</string>
    <string name="submit">提交</string>

    <!-- 微博 -->
    <string name="btn_title_weibo_sina">分享到新浪微博</string>
    <string name="btn_title_weibo_qq">分享到腾讯微博</string>
    <string name="btn_title_weibo_renren">分享到人人网</string>
    <string name="btn_title_weibo_sms">分享到短信</string>
    <string name="btn_title_weibo_cancle">取消</string>
    <string name="weibo_share_btn_title">分享</string>
    <string name="weibo_share_title">分享内容编辑</string>
    <string name="weibo_share_tip_qq">您尚未开通腾讯微博，请开通后重新尝试！ </string>
    <string name="weibo_share_tip_renren">人人网分享失败！ </string>
    <string name="weibo_share_tip_renren_repeat">请您不要频繁发布相同内容！ </string>
    <string name="weibo_share_tip_sina">请不要重复分享相同的内容！</string>
    <string name="weibo_share_tip_fail">对不起，分享失败，请检查您的网络设置！ </string>
    <string name="weibo_share_tip_net_error">分享功能需要连接网络，请检查网络状况</string>
    <string name="weibo_share_tip_server_error">服务器异常，请稍后重试！</string>
    <string name="weibo_share_tip_message_null">内容不能为空，请重新输入！</string>
    <string name="weibo_share_tip_success">分享成功！</string>
    <string name="weibo_bind_qq_tip_fail">绑定腾讯QQ账户失败！</string>
    <string name="weibo_bind_renren_tip_fail">绑定人人网账户失败！</string>
    <string name="weibo_bind_sina_tip_fail">绑定新浪微博账户失败！</string>

</resources>