<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/login_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_suer_head"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/ll_login_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_suer_head"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/edt_register_bg"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <EditText
            android:id="@+id/edt_child_name"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/phone_number"
            android:singleLine="true"
            android:textColorHint="#B4B4B4" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0.7dp"
            android:background="#B4B4B4"
            android:contentDescription="@null" />

        <EditText
            android:id="@+id/edt_tel"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="#B4B4B4"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/ll_login_info"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_login_selector"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/button_text_login"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/btn_login"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_login_register_selector"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/text_register_account"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>