<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/register_bg" >

        <include
            android:id="@+id/layout_title"
            layout="@layout/title_with_back_btn_wrap" />

        <EditText
            android:id="@+id/edt_child_phone"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@id/layout_title"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edt_register_bg"
            android:drawableLeft="@drawable/icon_phone"
            android:drawablePadding="5dp"
            android:hint="@string/hint_input_phone_number"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColorHint="@color/register_gray"
            android:textSize="@dimen/size_4" />

        <EditText
            android:id="@+id/edt_child_pwd"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@id/edt_child_phone"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_register_bg"
            android:drawableLeft="@drawable/icon_lock"
            android:drawablePadding="5dp"
            android:hint="@string/hint_input_pwd"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="@color/register_gray"
            android:textSize="@dimen/size_4" />

        <EditText
            android:id="@+id/edt_child_pwd_again"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@id/edt_child_pwd"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_register_bg"
            android:drawableLeft="@drawable/icon_lock"
            android:drawablePadding="5dp"
            android:hint="@string/hint_input_pwd_again"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="@color/register_gray"
            android:textSize="@dimen/size_4" />

        <EditText
            android:id="@+id/edt_child_nickname"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@id/edt_child_pwd_again"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_register_bg"
            android:drawableLeft="@drawable/icon_head"
            android:drawablePadding="5dp"
            android:hint="@string/hint_input_nickname"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColorHint="@color/register_gray"
            android:textSize="@dimen/size_4" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@id/edt_child_nickname"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_register_bg"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/rg_sex"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="1dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:button="@null"
                    android:checked="true"
                    android:drawableLeft="@drawable/checkbox_woman_man_style"
                    android:drawablePadding="5dp"
                    android:text="男" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="80dp"
                    android:button="@null"
                    android:drawableLeft="@drawable/checkbox_woman_man_style"
                    android:drawablePadding="5dp"
                    android:text="女" >
                </RadioButton>
            </RadioGroup>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_register_selector"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/text_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/size_3" />
    </RelativeLayout>

</ScrollView>